# beerwithme

./: Dockerfile  README.md  todo.md
.github/workflows/: build.yml
backend/: Cargo.toml  generate_schema.sh
backend/db/migrations/1.0.0/: down.sql  up.sql
backend/src/: app.rs  errors.rs  main.rs  schema.rs  tester.rs  tests.rs  utils.rs
backend/src/models/: brand.rs  brand_tests.rs  category.rs  category_tests.rs  crud.rs  item.rs  item_tests.rs  mod.rs
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle  build.gradle.kts
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/frontend/: MainActivity.kt
frontend/android/app/src/main/kotlin/fr/ninico/beerwithme/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: globals.dart  i18n.dart  main.dart
frontend/lib/components/: brands.dart  items.dart  new_brand.dart  new_category.dart  new_item.dart  scanner.dart  settings.dart  star_rating.dart
frontend/lib/models/: brand.dart  category.dart  crud.dart  item.dart  mock_api.dart
frontend/test/: models_test.dart  ui_test.dart
frontend/web/: index.html  manifest.json
